# thor-db

./: pom.xml
thor-cli/: Cargo.toml  index.js  package-lock.json  package.json
thor-cli/src/: InfiniteCommander.js  cli.js  collection-commands.js  command_line.rs  commands.js  database-commands.js  main.rs  ping.js  program.js  shell.rs  styles.js  thorcli.rs
thor-cli/src/client/: ApiClient.js  index.js
thor-cli/src/client/api/: CollectionsApi.js  DatabasesApi.js  DefaultApi.js  DynamicViewsApi.js  IndexApi.js  SearchApi.js  StatisticsApi.js  TransformsApi.js
thor-cli/src/client/model/: CollectionDto.js  CollectionOptions.js  DynamicViewDto.js  DynamicViewFilter.js  DynamicViewOption.js  Health.js  JsonObject.js  ListCollectionDto.js  SimpleCriteriaDto.js  ThorDto.js  ThorOptions.js  TransformDto.js  Ttl.js
thor-cli/src/clients/: client_utils.rs  coll.rs  db.rs  mod.rs
thor-core/: pom.xml
thor-core/src/main/java/fr/genin/christophe/thor/core/: Collection.java  Constraints.java  DynamicView.java  Infrastructure.java  Resultset.java  Serialization.java  Thor.java  ThorOps.java  TransactionImpl.java  Transactional.java  Transform.java  Ttl.java
thor-core/src/main/resources/: loki.js
thor-core/src/main/resources/avro/: thor.avsc
thor-core/src/test/java/fr/genin/christophe/thor/core/: AbstractSerializationTest.java  (+6 more)
thor-server/: README.md  pom.xml
thor-server/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-distroless
thor-server/src/main/resources/: application.properties  reflection-config.json
(+110 files in other folders)
