[package]
name = "thor-cli"
version = "0.1.0"
authors = ["cgenin <genin.christophe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
reqwest = { version = "0.11",  features = ["blocking", "json", "serde_json"] }
serde ={ version =  "1.0.129", features = ["derive"]}
serde_json = "1.0.66"
clap = "2.33"
termion = "*"
edit = "0.1.3"